* refclock_wwv.c fixes from Dave Mills.
* [Bug 810] Fix ntp-keygen documentation.
* [Bug 789] Fix multicast client crypto authentication and make sure arriving
	    multicast packets do not disturb the autokey dance.
* [Bug 787] Bug fixes for 64-bit time_t on Windows.
* [Bug 796] Clean up duplicate #defines in ntp_control.c.
* [Bug 569] Use the correct precision for the Leitch CSD-5300.
* [Bug 795] Moved declaration of variable to top of function.
* [Bug 798] ntpq [p typo crashes ntpq/ntpdc.
* [Bug 786] Fix refclock_bancomm.c on Solaris.
* [Bug 774] parsesolaris.c does not compile under the new Solaris.
* [Bug 782] Remove P() macros from Windows files.
* [Bug 778] ntpd fails to lock with drift=+500 when started with drift=-500.
* [Bug 592] Trimble Thunderbolt GPS support.
* IRIG, CHU, WWV, WWVB refclock improvements from Dave Mills.
* [Bug 757] Lose ULONG_CONST().
* [Bug 756] Require ANSI C (function prototypes).
* codec (audio) and ICOM changes from Dave Mills.

(4.2.4p1) Released by Harlan Stenn <stenn@ntp.org>
* [Bug 793] Update Hans Lambermont's email address in ntpsweep.
* [Bug 776] Remove unimplemented "rate" flag from ntpdate.
* [Bug 586] Avoid lookups if AI_NUMERICHOST is set.
* [Bug 770] Fix numeric parameters to ntp-keygen (Alain Guibert).
* [Bug 768] Fix io_setbclient() error message.
* [Bug 765] Use net_bind_service capability on linux.
* [Bug 760] The background resolver must be aware of the 'dynamic' keyword.
* [Bug 753] make union timestamp anonymous (Philip Prindeville).
* confopt.html: move description for "dynamic" keyword into the right section.
* pick the right type for the recv*() length argument.
(4.2.4) Released by Harlan Stenn <stenn@ntp.org>
* monopt.html fixes from Dave Mills.
* [Bug 452] Do not report kernel PLL/FLL flips.
* [Bug 746] Expert mouseCLOCK USB v2.0 support added.'
* driver8.html updates.
* [Bug 747] Drop <NOBR> tags from ntpdc.html.
* sntp now uses the returned precision to control decimal places.