@@ -1,6 +1,6 @@
 #
 # NTP configuration file (ntp.conf)
-# bearegard.udel.edu
+# beauregard.udel.edu
 #
 server 127.127.18.1		# NIST ACTS modem driver
 fudge 127.127.18.1 time1 .0035
