@@ -179,9 +179,10 @@ getCmdOpts(
 		} while (--ct > 0);
 	}
 
-	if (HAVE_OPT( SLEW ))
+	if (HAVE_OPT( SLEW )) {
 		clock_max = 600;
-
+		kern_enable = 0;
+	}
 	if (HAVE_OPT( UPDATEINTERVAL )) {
 		long val = OPT_VALUE_UPDATEINTERVAL;
 			  
